# NMLA

Lab1/: lab1.ipynb  main.jl
Lab2/: lab2.ipynb  main.tex
Lab3/: lab3.ipynb
Lab4/: lab4.ipynb
Lab5/: lab5.ipynb
Lab6/: lab6.ipynb
Lab7/BLAS/: CMakeLists.txt  main.cpp
Lab7/Lapack/: CMakeLists.txt  main.cpp
Lab7/Lapack/JuliaLabs/: cholesky.ipynb  eigen.ipynb  matrix.txt
Let2/: let2.ipynb
Let3/: let3.ipynb  main.py
